    options -setuid and -setgid now unuseful.
  - [30 Apr 00] Fixed little problem with displaying by places for the ones
    containing several (at least two) indications between parentheses.

* Gedcom to GeneWeb (ged2gwb) and GeneWeb to Gedcom (gwb2ged)
  - [25 May 00] Now save and restore the marriage witnesses (that was
    missing).

* Base configuration files (base.gwf)
  - [03 Jun 00] Added variable "propose_add_family" (default yes). If yes,
    propose to wizards a "add family" link in welcome page. If no, not
    proposed.
  - [25 May 00] Added variable "images_path" to specify a path to access
    the images defined in the "image" field (i.e *not* added by "send image").
    Applies only for images not found in the image/base directory. This
    variable, when set, could typically start with http://...
  - [08 May 00] (detail) The possible trailing spaces or control-m are
    now stripped (allowing to move a base.gwf file from Windows to
    Unix without needing to remove them).

* Counters (cnt/base.txt)
  - [28 May 00] Now, a count of "wizard", "friend" and normal accesses
    are added in this file, for statistics.

* Documentation
  - [31 May 00] Added paragraph explaining how to install GeneWeb in server
    mode under Windows NT (Falko Trojahn). English and German versions.
  - [25 May 00] Updated German documentation (Falko Trojahn).
  - [06 May 00] Updated Swedish documentation (Lars Gustavsson).
  - [04 May 00] Added one item in FAQ about a possible problem in CGI mode.

GeneWeb version 3.04
--------------------

* Languages
  - [06 Apr 00] Added Afrikaans (Louis Kruger).

* Setup program (gwsetup)
  - [09 Apr 00] Fixed some bugs in Linux rpm package causing gwsetup to
    fail and the browser to answer "no output".

* GeneWeb Service/CGI (gwd)
  - [29 Apr 00] Fixed bug in "descendants", "families with encoding": the
    marriage dates of grandchildren could sometime be erroneously the ones
    of the children.